Workaround for Java version